fix: add missing background attribution

--- a/mpcop-web/src/App.css
+++ b/mpcop-web/src/App.css
@@ -1,26 +1,32 @@
 @import url("https://pagecdn.io/lib/normalize/8.0.1/normalize.min.css");
 
-html,
-body,
-#root,
-.App {
-	min-height: 100vh;
+:root {
+	--background-url: url("./background.svg");
+	--root-min-height: 100vh;
+	--attribution-height-smartphone: 40px;
+	--attribution-height-desktop: 20px;
+	--app-min-height-smartphone: calc(
+		100vh - var(--attribution-height-smartphone)
+	);
+	--app-min-height-desktop: calc(100vh - var(--attribution-height-desktop));
+	--react-icons-font-size: 1.5em;
+}
+
+#root {
+	min-height: var(--root-min-height);
+	background-image: var(--background-url);
 }
 
 .App {
-	/*background-image: url("./background.svg");*/
-	background-color: #2e2e2e;
-	background-image: linear-gradient(
-		rgb(182, 182, 182),
-		rgb(131, 131, 131),
-		rgb(61, 61, 61),
-		rgb(0, 0, 0)
-	);
-	/*TODO: attribute author: https://www.freepik.com/free-vector/dark-polygonal-background_6076273.htm#page=1&query=black%20polygon&position=0&from_view=keyword */
-	background-image: url("./background.svg");
-	
+	min-height: var(--app-min-height-desktop);
+}
+
+@media only screen and (max-width: 450px) {
+	.App {
+		min-height: var(--app-min-height-smartphone);
+	}
 }
 
 .top-react-icons {
-	font-size: 1.5em;
+	font-size: var(--react-icons-font-size);
 }
